--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/server/cmd/"
+            "program": "${workspaceFolder}/server/cmd/",
+            "args": []
         },
         {
             "name": "Debug Client",
