Change networks in the compose file

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -4,5 +4,8 @@ services:
     build: .
     container_name: telebot
     restart: unless-stopped
+    networks:
+      - "kafka-network"
 networks:
-  telebot-network:
+  kafka-network:
+    external: true
