Change the launch to debug the client

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/client/cmd/"
+            "program": "${workspaceFolder}/client/cmd/",
+            "args": ["--conn", "localhost:9093"]
         }
     ]
 }
