Amend the compose to build the greater service

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "kafka-network"
   greeter:
     image: greeter:${TAG}
-    build: ../client
+    build: ../greeter
     restart: unless-stopped
     networks:
       - "kafka-network"
