--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,5 +1,11 @@
 services:
   telebot:
+    environment:
+      STORAGE_PASSWORD: ${STORAGE_PASSWORD}
+      STORAGE_HOST: ${STORAGE_HOST}
+      STORAGE_DB: ${STORAGE_DB}
+      STORAGE_USER: ${STORAGE_USER}
+      STORAGE_PASSWORD: ${STORAGE_PASSWORD}
     image: telebot:${TAG}
     build: ../server
     restart: unless-stopped
