Fix using of variables from the .env

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,10 +15,9 @@ ARG STORAGE_DB
 ARG STORAGE_USER
 ARG STORAGE_PASSWORD
 
-ENTRYPOINT [
-    "/telebot",
-    "--conf", "./config.yml",
-    "--stAddr", "${STORAGE_HOST}",
-    "--stDB", "${STORAGE_DB}"
-    "--stUser", "${STORAGE_USER}"
-    "--stPass", "${STORAGE_PASSWORD}"]
+ENV STORAGE_HOST=${STORAGE_HOST}
+ENV STORAGE_DB=${STORAGE_DB}
+ENV STORAGE_USER=${STORAGE_USER}
+ENV STORAGE_PASSWORD=${STORAGE_PASSWORD}
+
+ENTRYPOINT ./telebot --conf ./config.yml --stAddr ${STORAGE_HOST} --stDB ${STORAGE_DB} --stUser ${STORAGE_USER} --stPass ${STORAGE_PASSWORD}
