--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/client/cmd/",
+            "program": "${workspaceFolder}/greeter/cmd/",
             "args": ["--conn", "localhost:9093"]
         }
     ]
