--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/server/cmd/",
-            "args": []
+            "args": [],
+            "asRoot": true,
+            "console": "integratedTerminal"
         },
         {
             "name": "Debug Client",
