Use volumes and a config arg in docker

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -3,16 +3,22 @@ services:
     image: telebot:v0.1.0
     build:
       context: ../server
+      args:
+        CONFIG: ${config_path}
     restart: unless-stopped
     networks:
       - "kafka-network"
       - "storage-network"
+    volumes:
+      - ${data_folder}:/var/lib/telebot
   greeter:
     image: greeter:0.0.0
     build: ../greeter
     restart: unless-stopped
     networks:
       - "kafka-network"
+    volumes:
+      - ${data_folder}:/var/lib/telebot
 networks:
   kafka-network:
     external: true
