--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   telebot:
-    image: telebot:v0.1.0
+    image: telebot:v1.0.0
     build:
       context: ../server
     restart: unless-stopped
@@ -11,7 +11,7 @@ services:
       - ${data_folder}:/var/lib/telebot
       - ${config_path}:/config.yml
   greeter:
-    image: greeter:0.0.0
+    image: greeter:v1.0.0
     build: ../greeter
     restart: unless-stopped
     networks:
