Add time synchroniztion with the host

--- a/greeter/Dockerfile
+++ b/greeter/Dockerfile
@@ -6,6 +6,7 @@ RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o /greeter
 
 FROM alpine AS release-stage
+RUN apk add --no-cache tzdata
 WORKDIR /
 COPY --from=build-stage /greeter /greeter
 ENTRYPOINT ["/greeter"]
